# script.module.xbmcext

./: README.md  addon.xml  pyproject.toml  xbmcext.py
.github/workflows/: run-tests.yml
tests/: test_xbmcext.py
xbmcext/: __init__.py
