[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "script.module.xbmcext"
version = "1.3.0"
authors = [{ name = "groggyegg", email = "groggyegg@protonmail.com" }]
description = "XBMCExt extends windows, dialogs, and various control widgets."
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
  "Kodistubs >= 19.0.3"
]
classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/groggyegg/script.module.xbmcext"
